Fix page overflow/underflow bug on PageNav

--- a/src/styles/pagenav.module.css
+++ b/src/styles/pagenav.module.css
@@ -5,3 +5,9 @@
 .counter {
   background-color: aquamarine;
 }
+
+.buttons {
+  display: flex;
+  flex-flow: row nowrap;
+  align-items: center;
+}
